Add links from portfolio

--- a/index.html
+++ b/index.html
@@ -91,27 +91,42 @@
             >
           </li>
           <li>
-            <a href="https://sokolovpavel7.github.io/portfolio/" target="_blank"
-              >Игра: тренировка в прицеливании</a
-            >
-          </li>
-          <li>
-            <a href="https://sokolovpavel7.github.io/portfolio/" target="_blank"
+            <a
+              href="https://sokolovpavel7.github.io/picture-slider/"
+              target="_blank"
               >Слайдер картинок</a
             >
           </li>
           <li>
-            <a href="https://sokolovpavel7.github.io/portfolio/" target="_blank"
+            <a
+              href="https://sokolovpavel7.github.io/aim-training-game/"
+              target="_blank"
+              >Игра: тренировка в прицеливании</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://sokolovpavel7.github.io/cards-slider/"
+              target="_blank"
+              >Слайдер карточек</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://sokolovpavel7.github.io/drag-and-drop/"
+              target="_blank"
               >Drag-&-Drop</a
             >
           </li>
           <li>
-            <a href="https://sokolovpavel7.github.io/portfolio/" target="_blank"
+            <a
+              href="https://sokolovpavel7.github.io/drawing-board/"
+              target="_blank"
               >Доска для рисования</a
             >
           </li>
           <li>
-            <a href="https://sokolovpavel7.github.io/math-test/"
+            <a href="https://sokolovpavel7.github.io/math-test/" target="_blank"
               >Математический тест</a
             >
           </li>
